<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.em9310li.myapplication.MainActivity">
    <item
        android:id="@+id/action_Delete"
        android:orderInCategory="100"
        android:title="@string/deleteUser"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_Edit"
        android:orderInCategory="100"
        android:title="@string/editUser"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Random"
        android:orderInCategory="100"
        android:title="@string/random"
        app:showAsAction="never">

    </item>
    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:actionViewClass="android.widget.SearchView"> </item>



</menu>