<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardview_dark_background"
    card_view:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:divider="@color/cardview_light_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background"
                android:textColorLink="@color/cardview_light_background" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textColor="@android:color/darker_gray"
                android:textColorLink="@color/cardview_light_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textColor="@color/cardview_light_background" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewEmail"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:text="@string/hint_password"
                android:textColor="@color/cardview_light_background" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewPassword"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"
                android:textColor="@android:color/darker_gray"
                android:textColorLink="@color/cardview_light_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/DeleteButton"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.44"
                    android:gravity="right" />
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>